# covid19-question-classification

./: .coverage  .flake8  .gitignore  Makefile  README.md  data_prep.py  main.py  pyproject.toml  tox.ini  train.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml
configs/: configs.py
covid19_question_classification/: data_processing.py  model.py  predict.py  train.py
db/: config.py  db.py  db2.py  old_db.py
loggings/: logger.py
monitor/: monitor.py
tests/: test_covid19_question_classification.py  test_data_processing.py  test_mock_logging.py
